--- a/.gitignore
+++ b/.gitignore
@@ -83,9 +83,8 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
 .python-version
+
 # Environments
 .env
 .venv
@@ -94,9 +93,13 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
 #Pycharm
 .idea/
+
+#DS_Store
 .DS_Store
 
-
+#Data Directories
 data/
+premade_data/
